RESOLVED FIXED155126
Last opened tab does not receive SetHiddenPageTimerThrottlingIncreaseLimit message
https://bugs.webkit.org/show_bug.cgi?id=155126
Summary Last opened tab does not receive SetHiddenPageTimerThrottlingIncreaseLimit me...
Gavin Barraclough
Reported 2016-03-07 11:47:46 PST
WebPageProxy will increment the hidden page throttling counter from within its constructor, which currently causes the WebProcessPool to try to synchronously message all processes. The web page triggering the increment then fails to receive the message, since it was still being constructed. Make the update of the limit async, such that the page is fully constructed before the WebProcessPool processes the update.
Attachments
Fix (3.04 KB, patch)
2016-03-07 11:50 PST, Gavin Barraclough
cdumez: review+
Fix (3.11 KB, patch)
2016-03-09 14:39 PST, Gavin Barraclough
andersca: review+
Gavin Barraclough
Comment 1 2016-03-07 11:50:43 PST
Gavin Barraclough
Comment 2 2016-03-07 11:51:22 PST
Comment on attachment 273199 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=273199&action=review > Source/WebKit2/ChangeLog:14 > + One too many newlines!
Chris Dumez
Comment 3 2016-03-07 12:08:08 PST
Comment on attachment 273199 [details] Fix r=me
Gavin Barraclough
Comment 4 2016-03-07 12:28:33 PST
Transmitting file data ... Committed revision 197698.
WebKit Commit Bot
Comment 5 2016-03-09 13:14:06 PST
Re-opened since this is blocked by bug 155252
Gavin Barraclough
Comment 6 2016-03-09 14:39:33 PST
Gavin Barraclough
Comment 7 2016-03-09 17:55:30 PST
Transmitting file data ... Committed revision 197914.
Note You need to log in before you can comment on or make changes to this bug.